@@ -1,3 +1,7 @@
+2013-10-07  Chao-ying Fu  <Chao-ying.Fu@imgtec.com>
+
+	* micromips-opc.c (micromips_opcodes): Fix dmfgc0 and dmtgc0.
+
 2013-09-30  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i386-opc.tbl: Add Size64 to movq/vmovq with Reg64 operand.
